force-app/main/default/objects/Rationale__c/Rationale__c.object-meta.xml
<CustomObject>
    <description>Declared reasoning for a decision, structured. Master-detail child of Decision_Record__c. Whether the rationale was declared before the action is load-bearing and shown in the UI.</description>
    <label>Rationale</label>
    <nameField>
        <displayFormat>RA-{000000}</displayFormat>
        <label>Rationale Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rationales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>