force-app/main/default/objects/Rationale__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Confidence</label>
    <description>The agent's declared confidence in this rationale, 0 to 1.</description>
    <inlineHelpText>Declared confidence score from 0.00 to 1.00.</inlineHelpText>
    <type>Number</type>
    <precision>3</precision>
    <scale>2</scale>
</CustomField>