force-app/main/default/objects/Rationale__c/fields/Decision_Record__c.field-meta.xml
<CustomField>
    <fullName>Decision_Record__c</fullName>
    <label>Decision Record</label>
    <description>The decision this rationale explains.</description>
    <type>MasterDetail</type>
    <referenceTo>Decision_Record__c</referenceTo>
    <relationshipLabel>Rationales</relationshipLabel>
    <relationshipName>Rationales</relationshipName>
</CustomField>