force-app/main/default/objects/Rationale__c/fields/Declared_At__c.field-meta.xml
<CustomField>
    <fullName>Declared_At__c</fullName>
    <label>Declared At</label>
    <description>When the rationale was declared by the agent.</description>
    <inlineHelpText>The time the agent declared this reasoning.</inlineHelpText>
    <type>DateTime</type>
</CustomField>