force-app/main/default/objects/Rationale__c/fields/Declared_Before_Action__c.field-meta.xml
<CustomField>
    <fullName>Declared_Before_Action__c</fullName>
    <label>Declared Before Action</label>
    <description>True when the rationale was captured before the consequential action fired. A post-hoc rationale is a materially weaker evidentiary artifact and the UI flags it.</description>
    <inlineHelpText>Whether the agent declared this reasoning before it acted.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>