force-app/main/default/objects/Rationale__c/fields/Model_Version__c.field-meta.xml
<CustomField>
    <fullName>Model_Version__c</fullName>
    <label>Model Version</label>
    <description>The model version that produced the declared rationale.</description>
    <inlineHelpText>The underlying model version at declaration time.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>