force-app/main/default/objects/Rationale__c/fields/Prompt_Template_Version__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Template_Version__c</fullName>
    <label>Prompt Template Version</label>
    <description>Version of the prompt template in effect when the rationale was declared.</description>
    <inlineHelpText>The prompt template version at declaration time.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>