force-app/main/default/objects/Rationale__c/fields/Statement__c.field-meta.xml
<CustomField>
    <fullName>Statement__c</fullName>
    <label>Statement</label>
    <description>The agent's own account of why it chose this. Declared, not observed. FLS-restricted to holders of Evidence_View_Rationale.</description>
    <inlineHelpText>The agent's stated reasoning. This is a declared account, not a computation trace.</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>